# PhD

Putative/: BoutonDetection.sh  ProximityDetection.sh  erroranalysis.sh  xlsprocessing.sh
Putative/AxonDendriteProximityDetector/: .cproject  .directory  .project  AxonDendriteProximityDetector.kdev4  CMakeLists.txt  cmake_install.cmake  transform.docx  vertex1~  vertex~
Putative/AxonDendriteProximityDetector/.kdev4/: AxonDendriteProximityDetector.kdev4
Putative/AxonDendriteProximityDetector/src/: amiraReader.cpp~  amiraReader.h  amiraReader.h~  axon_dendrite_proximity_finder.cpp  axon_dendrite_proximity_finder.cpp~  axon_dendrite_proximity_finder.h  axon_dendrite_proximity_finder.h~  axon_dendrite_proximity_finder_client.cpp  axon_dendrite_proximity_finder_client.cpp~  basics.cpp  basics.cpp~  basics.h  basics.h~  brick_image_reader.cpp~  brick_image_reader.h  mergedfile_proximity_client.cpp  pre_decon.cxx  proximity.cpp  proximity.h~  proximity_finder.cpp  proximity_finder.h  proximity_finder_client.cpp  src.kdev4  typedefs_two.h  utility.cpp  utility.h
Putative/AxonDendriteProximityDetector/src/.kdev4/: src.kdev4
Putative/AxonDendriteProximityImagePublisher/: AxonDendriteProximityDetector.kdev4  AxonDendriteProximityImagePublisher.kdev4  CMakeLists.txt  ProximityDetection.sh  cmake_install.cmake
Putative/BoutonClustering/: .cproject  .project  BoutonClustering.kdev4  BoutonDetectionGlobal.sh  BoutonDetectionLocal.sh  CMakeCache.txt  Makefile  Params.sh  Params.sh~  ProximityDetection.sh  ProximityDetection.sh~  cmake_install.cmake  copyProximityDetection.sh
Putative/BoutonDetectorThesisCode/: CMakeLists.txt
Putative/ErrorCalulator/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  ErrorCalculator  ErrorCalculator.kdev4  Makefile  cmake_install.cmake
Putative/ErrorCalulator/.kdev4/: ErrorCalculator.kdev4
Putative/ErrorCalulator/src/: amiraReader.cpp  basics.cpp  bouton_cluster.h~  bouton_finder.cpp~  bouton_finder_client.cpp  bouton_finder_client.cpp~  result_analyzer.cpp  result_analyzer.h~  utility.cpp  utility.h
Putative/RoiGenerator/: BoutonParameterEstimation.kdev4  CMakeCache.txt  CMakeLists.txt  Makefile  ProximityDetection.sh  S016_ZScaled_0_961_Trans.am  cmake_install.cmake
Putative/RoiGenerator/.kdev4/: BoutonParameterEstimation.kdev4
Putative/RoiGenerator/src/: .project  amiraReader.cpp  amiraReader.cpp~  amiraReader.h  amira_to_raster.cpp  basics.cpp  bouton_finder.cpp~  bouton_finder.h  bouton_finder_client.cpp  bouton_finder_client.cpp~  bouton_params.h  brick_image_reader.cpp  brick_image_reader.h  result_analyzer.cpp  typedefs.h  typedefs_two.h  utility.h
Putative/SpatialGraphResampler/: BoutonParameterEstimation.kdev4  BoutonParameterEstimation.kdev4~  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt~  Makefile  SpatialGraphResampler  SpatialGraphResampler.kdev4  cmake_install.cmake
Putative/SpatialGraphToTreeConverter/: CMakeLists.txt  SpatialGraphToTreeConverter.kdev4
Putative/SurfaceExtraction/: CMakeCache.txt  CMakeLists.txt  GeodesicActiveContourImageFilterOutput2.mha  GeodesicActiveContourImageFilterOutput3.mha  GeodesicActiveContourImageFilterOutput4.mha  Makefile  Proximity_Zone_331011.tif  Surface  SurfaceExtraction.kdev4  cmake_install.cmake  main.cpp  run.sh
Putative/SynapseDetector/: CMakeLists.txt  SynapseDetector.kdev4
vM1/: Feature_Update.ipynb  Final.ipynb  Final_Plots.ipynb  Finger_Injections_Registration.ipynb  Plots.ipynb  Plots_NeuN_Profiles.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  create_vM1-Copy1.ipynb  create_vM1-Copy2.ipynb  create_vM1.ipynb  plots_param_selection.ipynb  registration-Copy1.ipynb  registration-Copy2.ipynb  registration.ipynb  registration_final_coronal_ref_frame.ipynb  registration_final_tangential_ref_frame.ipynb  registration_local - Copy.ipynb  registration_local.ipynb  registration_local.py
(+367 files in other folders)
